# Particle-Life

./: .gitignore  CMakeLists.txt  ParticleLife  README.md  SCREENSHOTS.md  imgui.ini  run.sh  setup.sh  test_screenshot.sh
docs/: CLEANUP_SUMMARY.md  FEATURE_COMPARISON.md  ORGANIZATION_SUMMARY.md  README.md  UI_POLISH_SUMMARY.md  VECTORIZATION_OPTIMIZATIONS.md  WHY_PARTICLES_PAIR_UP.md
docs/utils/: screenshot_capture.cpp  screenshot_capture.py
include/rendering/: Renderer.h  ShaderManager.h
include/simulation/: Particle.h  ParticleSystem.h  SpatialHash.h
include/ui/: Interface.h
src/: ParticleLife.cpp  main.cpp  main.cpp.backup
src/rendering/: Renderer.cpp  ShaderManager.cpp
src/simulation/: ParticleSystem.cpp
src/ui/: Interface.cpp  Interface_backup.cpp
utils/: README.md  capture.sh
